creates nav bar with items

--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
     <script src="assets/app.js"></script>
   </head>
   <body>
-    <h1>Test</h1>
+    <nav>
+      <ul>
+        <li>Main Campground</li>
+        <li>Cat Safari</li>
+        <li>Camper Cameos</li>
+        <li>Pet Camp Express</li>
+        <li>About</li>
+        <li>Contact</li>
+        <li>Blog</li>
+      </ul>
+    </nav>
 
   </body>
 </html>
