--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <nav>
-      <ul>
+      <ul class="left">
         <li>Main Campground</li>
         <li>Cat Safari</li>
         <li>Camper Cameos</li>
       </ul>
-      <ul>
+      <ul class="right">
         <li>Pet Camp Express</li>
         <li>About</li>
         <li>Contact</li>
