working on nav bar

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
   <head>
     <meta charset="utf-8">
     <title>Practice Pets Camp</title>
@@ -9,8 +10,10 @@
 
     <script src="assets/app.js"></script>
   </head>
+
   <body>
-    <nav>
+
+    <header>
       <ul class="left">
         <li>Main Campground</li>
         <li>Cat Safari</li>
@@ -22,7 +25,8 @@
         <li>Contact</li>
         <li>Blog</li>
       </ul>
-    </nav>
-
+    </header>
+    
   </body>
+
 </html>
