working with css issues, nav bar isnt full width

--- a/index.html
+++ b/index.html
@@ -13,20 +13,26 @@
 
   <body>
 
-    <header>
-      <ul class="left">
-        <li>Main Campground</li>
-        <li>Cat Safari</li>
-        <li>Camper Cameos</li>
-      </ul>
-      <ul class="right">
-        <li>Pet Camp Express</li>
-        <li>About</li>
-        <li>Contact</li>
-        <li>Blog</li>
-      </ul>
-    </header>
-    
+    <div>
+      <nav>
+        <ul class="left">
+          <li>Main Campground</li>
+          <li>Cat Safari</li>
+          <li>Camper Cameos</li>
+        </ul>
+        <ul class="right">
+          <li>Pet Camp Express</li>
+          <li>About</li>
+          <li>Contact</li>
+          <li>Blog</li>
+        </ul>
+      </nav>
+    </div>
+
+    <div id="hero">
+      <h1>Sample Text for the moment</h1>
+    </div>
+
   </body>
 
 </html>
